# versor

./: .gitignore  .travis.yml  CMakeLists.txt  CMakeLists.txt.old  LICENSE  Makefile  README.md  build_with_graphics.sh  package.xml
cmake/: FindGLV.cmake  Findgfx.cmake  VersorConfig.cmake.in  external_gfx.cmake  external_gl2ps.cmake  external_glv.cmake
copyrights/: COPYRIGHT
examples/: CMakeLists.txt  rotations.cpp  xFabrikChain.cpp  xFrame.cpp  xRobotArm.cpp
ext/gl2ps/: CMakeLists.txt
include/vsr/: vsr.h  vsr_app.h
include/vsr/detail/: generic_op.h  vsr_algebra.h  vsr_basis.h  vsr_generic_op.h  vsr_instructions.h  vsr_multivector.h  vsr_products.h  vsr_split_met.h  vsr_xlists.h
include/vsr/draw/: vsr_cga3D_draw.h  vsr_cga3D_render.h  vsr_draw.h
include/vsr/form/: vsr_cga3D_frame.h  vsr_cubicLattice.h  vsr_field.h  vsr_twist.h
include/vsr/space/: vsr_cga3D.h  vsr_cga3D_op.h
include/vsr/util/: vsr_cga3D_app.h  vsr_cga3D_control.h  vsr_patch.h
scratch/projects/kinematics/: xConstrainedFabrik.cpp
test/: CMakeLists.txt  forward_kinematics.cpp  rotations.cpp  xBasic.cpp  xChain.cpp
tests/: test_initial.cpp
vsr/: vsr_cga3D.h
